# python_tdd_exercises

./: .gitignore  ASSERTION_ERROR.md  ATTRIBUTE_ERROR.md  BOOLEANS.md  CALCULATOR.md  CLASSES.md  CNAME  DATA_STRUCTURES.md  DICTIONARIES.md  EXCEPTION_HANDLING.md  FUNCTIONS.md  GLOSSARY.md  INDENTATION_ERROR.md  INPUTS_AND_OUTPUTS.md  LEARNING_MODELS.md  LISTS.md  LIST_COMPREHENSIONS.md  MODULE_NOT_FOUND_ERROR.md  NONE.md  PASSING_VALUES.md  PERSON_FACTORY.md  README.md  README.rst  REFERENCES.md  TDD_CALCULATOR.md  TDD_SETUP.md  TDD_SLEEP_DURATION.md  TRUTH_TABLE_01.md  TRUTH_TABLE_02_LOGICAL_CONJUNCTION.md  TRUTH_TABLE_03_LOGICAL_DISJUNCTION.md  TRUTH_TABLE_04_LOGICAL_IMPLICATION.md  TRUTH_TABLE_05_LOGICAL_EQUALITY.md  TRUTH_TABLE_06_EXCLUSIVE_DISJUNCTION.md  TRUTH_TABLE_07_LOGICAL_NAND.md  TRUTH_TABLE_08_LOGICAL_NOR.md  TRUTH_TABLE_09_CONVERSE_NON_IMPLICATION.md  TRUTH_TABLE_10_MATERIAL_NON_IMPLICATION.md  TRUTH_TABLE_11_NEGATE.md  TRUTH_TABLE_12_PROJECT.md  TRUTH_TABLE_13_CONVERSE_IMPLICATION.md  (+6 more)
notes/: INPUTS_AND_OUTPUTS.md  boolean_logic  convert_md_to_rst.py  five_step_design  objects  script  tdd lessons  teaching  todo  word_count.json  word_count.py
source/: 404.rst  AssertionError.md  AssertionError.rst  AttributeError.md  AttributeError.rst  How I setup a Test Driven Development Environment.md  How I setup a Test Driven Development Environment.rst  How I setup my IDE.rst  How to Setup a Test Driven Development Environment.rst  IndentationError.md  IndentationError.rst  ModuleNotFoundError.md  ModuleNotFoundError.rst  None.md  None.rst  RANDOM_CHAPTER.md  (+112 more)
(+659 files in other folders)
