[project]
name = "python-tdd-exercises"
version = "0.1.0"
description = "Add your description here"
readme = "README.rst"
requires-python = ">=3.15"
dependencies = [
    "sniffer>=0.4.1",
    "sphinx>=9.1.0",
    "sphinx-notfound-page>=1.1.0",
    "sphinx-sitemap>=2.9.0",
    "sphinxawesome-theme==5.3.2",
    "watchdog>=6.0.0",
]
